@@ -29,6 +29,7 @@ import bio.overture.maestro.domain.entities.metadata.repository.StudyRepository;
 import bio.overture.maestro.domain.entities.metadata.study.Analysis;
 import bio.overture.maestro.domain.entities.metadata.study.Sample;
 import bio.overture.maestro.domain.entities.metadata.study.Study;
+import bio.overture.maestro.domain.port.outbound.indexing.AnalysisCentricIndexAdapter;
 import bio.overture.maestro.domain.port.outbound.indexing.BatchIndexFilesCommand;
 import bio.overture.maestro.domain.port.outbound.indexing.FileCentricIndexAdapter;
 import bio.overture.maestro.domain.port.outbound.indexing.rules.ExclusionRulesDAO;
@@ -38,6 +39,7 @@ import bio.overture.maestro.domain.port.outbound.metadata.study.GetAnalysisComma
 import bio.overture.maestro.domain.port.outbound.metadata.study.GetStudyAnalysesCommand;
 import bio.overture.maestro.domain.port.outbound.metadata.study.StudyDAO;
 import bio.overture.maestro.domain.port.outbound.notification.IndexerNotification;
+import io.vavr.Tuple2;
 import lombok.SneakyThrows;
 import lombok.val;
 import org.jetbrains.annotations.NotNull;
@@ -52,21 +54,17 @@ import org.mockito.quality.Strictness;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 import reactor.test.StepVerifier;
-
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static bio.overture.maestro.domain.api.DefaultIndexer.REPO_CODE;
 import static bio.overture.masestro.test.Fixture.loadJsonFixture;
+import static bio.overture.masestro.test.Fixture.loadJsonFixtureSnakeCase;
 import static bio.overture.masestro.test.TestCategory.UNIT_TEST;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.BDDMockito.given;
 import static org.mockito.BDDMockito.then;
-import static org.mockito.Mockito.reset;
-import static org.mockito.Mockito.times;
+import static org.mockito.Mockito.*;
 
 
 @ExtendWith(MockitoExtension.class)
@@ -87,15 +85,22 @@ class DefaultIndexerTest {
     private FileCentricIndexAdapter indexServerAdapter;
 
     @Mock
-    private Indexer indexer;
+    private AnalysisCentricIndexAdapter analysisCentricIndexAdapter;
+
+    @Mock
+    private IndexEnabledProperties indexEnabledProperties;
+
+    private DefaultIndexer indexer;
 
     @Mock
     private Notifier notifier;
 
     @BeforeEach
     void setUp() {
-        reset(studyRepositoryDao, studyDAO, indexServerAdapter, notifier);
-        this.indexer = new DefaultIndexer(indexServerAdapter, studyDAO, studyRepositoryDao, exclusionRulesDAO, notifier);
+      reset(studyRepositoryDao, studyDAO, indexServerAdapter, analysisCentricIndexAdapter, notifier);
+      given(indexEnabledProperties.isFileCentricEnabled()).willReturn(Boolean.TRUE);
+      this.indexer = new DefaultIndexer(indexServerAdapter, analysisCentricIndexAdapter, studyDAO, studyRepositoryDao,
+              exclusionRulesDAO, notifier, indexEnabledProperties);
     }
 
     @Test
@@ -116,23 +121,20 @@ class DefaultIndexerTest {
             .willReturn(Mono.error(new IndexerException("failed", new RuntimeException(""), failure)));
 
         // When
-        val indexResultMono = indexer.indexStudy(IndexStudyCommand.builder()
+        val indexResult = indexer.indexStudy(IndexStudyCommand.builder()
             .studyId("anyStudy")
             .repositoryCode(filesRepository.getCode())
             .build()
         );
 
         // Then
-        StepVerifier.create(indexResultMono)
+        StepVerifier.create(indexResult)
             .expectNext(output)
             .expectComplete()
             .verify();
 
         then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
-        then(studyDAO).should(times(1)).getStudyAnalyses(any(GetStudyAnalysesCommand.class));
-        then(indexServerAdapter).should(times(0))
-            .batchUpsertFileRepositories(any());
-        then(notifier).should(times(1)).notify(any());
+        then(indexServerAdapter).should(times(0)).batchUpsertFileRepositories(any());
     }
 
     @Test
@@ -143,13 +145,13 @@ class DefaultIndexerTest {
         val failure = FailureData.builder()
             .failingIds(Map.of(REPO_CODE, Set.of(repoCode))).build();
         val failedIndexResult = IndexResult.builder().failureData(failure).successful(false).build();
-        val getStudiesCmd = GetAllStudiesCommand.builder().filesRepositoryBaseUrl(filesRepository.getBaseUrl()).build();
+        val getStudiesCmd = GetAllStudiesCommand.builder().filesRepositoryBaseUrl(filesRepository.getUrl()).build();
 
         given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
         given(studyDAO.getStudies(eq(getStudiesCmd))).willReturn(Flux.error(new RuntimeException("sike!")));
 
         // When
-        val indexResultMono = indexer.indexStudyRepository(IndexStudyRepositoryCommand.builder()
+        val indexResultMono = indexer.indexRepository(IndexStudyRepositoryCommand.builder()
             .repositoryCode("TEST-REPO")
             .build());
 
@@ -167,67 +169,6 @@ class DefaultIndexerTest {
 
 
     @Test
-    void indexRepositoryshouldNotifyOnStudyFetchError() {
-        //Given
-        val repoCode = "TEST-REPO";
-        val filesRepository = getStubFilesRepository();
-        val studies = getExpectedStudies();
-        val fileRepo = Mono.just(getStubFilesRepository());
-        val failure = FailureData.builder()
-            .failingIds(Map.of("studyId", Set.of("PACA-CA"))).build();
-        val failedIndexResult = IndexResult.builder().failureData(failure).successful(false).build();
-        val successfulResult = IndexResult.builder().successful(true).build();
-        val getStudiesCmd = GetAllStudiesCommand.builder().filesRepositoryBaseUrl(filesRepository.getBaseUrl()).build();
-
-        given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of()));
-        given(studyDAO.getStudies(eq(getStudiesCmd))).willReturn(Flux.fromIterable(studies));
-        given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
-        given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
-
-        for(val study: studies) {
-            val studyId = study.getStudyId();
-            val command = GetStudyAnalysesCommand.builder()
-                .filesRepositoryBaseUrl(filesRepository.getBaseUrl()).studyId(studyId)
-                .build();
-
-            if (study.getStudyId().equalsIgnoreCase("PACA-CA")) {
-                given(studyDAO.getStudyAnalyses(eq(command)))
-                    .willReturn(Mono.error(new IndexerException("failed", new RuntimeException(""), failure)));
-            } else {
-                val studyAnalyses = getStudyAnalyses(studyId);
-                val fileCentricDocuments = getExpectedFileCentricDocument(studyId);
-                val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(fileCentricDocuments).build();
-
-                given(studyDAO.getStudyAnalyses(eq(command))).willReturn(Mono.just(studyAnalyses));
-                given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand)))
-                    .willReturn(Mono.just(successfulResult));
-            }
-        }
-
-        // When
-        val indexResultMono = indexer.indexStudyRepository(IndexStudyRepositoryCommand.builder()
-            .repositoryCode("TEST-REPO")
-            .build());
-
-        // Then
-        StepVerifier.create(indexResultMono)
-            .expectNext(failedIndexResult)
-            .expectComplete()
-            .verify();
-
-        then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
-        for(val study: studies) {
-            val studyId = study.getStudyId();
-            val command = GetStudyAnalysesCommand.builder()
-                .filesRepositoryBaseUrl(filesRepository.getBaseUrl()).studyId(studyId)
-                .build();
-            then(studyDAO).should(times(1)).getStudyAnalyses(eq(command));
-        }
-        then(indexServerAdapter).should(times(2)).batchUpsertFileRepositories(any());
-        then(notifier).should(times(1)).notify(any());
-    }
-
-    @Test
     void shouldExcludeSampleIdFromIndexing() {
         // Given
         val studyId = "PACA-CA";
@@ -235,7 +176,7 @@ class DefaultIndexerTest {
         val filesRepository = getStubFilesRepository();
         val a1 = getStudyAnalyses(studyId);
         // load the fixture with
-        val fileCentricDocuments = Arrays.asList(loadJsonFixture(getClass(),
+        val fileCentricDocuments = Arrays.asList(loadJsonFixtureSnakeCase(getClass(),
             studyId + ".files.excluded.SA520221.json", FileCentricDocument[].class));
         val repositoryMono = Mono.just(filesRepository);
         val studyAnalyses = Mono.just(a1);
@@ -244,7 +185,7 @@ class DefaultIndexerTest {
         val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(fileCentricDocuments).build();
         val getStudyAnalysesCommand = GetStudyAnalysesCommand.builder()
             .studyId(studyId)
-            .filesRepositoryBaseUrl(filesRepository.getBaseUrl())
+            .filesRepositoryBaseUrl(filesRepository.getUrl())
             .build();
 
         Mono<Map<Class<?>, List<? extends ExclusionRule>>> sampleExclusionRule = Mono.just(
@@ -260,121 +201,67 @@ class DefaultIndexerTest {
         given(exclusionRulesDAO.getExclusionRules()).willReturn(sampleExclusionRule);
 
         // When
-        val indexResultMono = indexer.indexStudy(IndexStudyCommand.builder()
+        val indexResultFlux = indexer.indexStudy(IndexStudyCommand.builder()
             .studyId(studyId)
             .repositoryCode(filesRepository.getCode())
-            .build()
-        );
-
-        // Then
-        StepVerifier.create(indexResultMono)
-            .expectNext(result)
-            .expectComplete()
-            .verify();
-
-        then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
-        then(studyDAO).should(times(1)).getStudyAnalyses(eq(getStudyAnalysesCommand));
-        then(indexServerAdapter).should(times(1))
-            .batchUpsertFileRepositories(eq(batchIndexFilesCommand));
-
-    }
-
-    @Test
-    void shouldIndexAllRepositoryStudies() {
-        //Given
-        val repoCode = "TEST-REPO";
-        val filesRepository = getStubFilesRepository();
-        val studies = getExpectedStudies();
-        val fileRepo = Mono.just(getStubFilesRepository());
-        val result = IndexResult.builder().successful(true).build();
-        val monoResult =  Mono.just(result);
-        val getStudiesCmd = GetAllStudiesCommand.builder().filesRepositoryBaseUrl(filesRepository.getBaseUrl()).build();
-
-        given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of()));
-        given(studyDAO.getStudies(eq(getStudiesCmd))).willReturn(Flux.fromIterable(studies));
-        given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
-        given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
-
-        for(Study study: studies) {
-            val studyId = study.getStudyId();
-            val command = GetStudyAnalysesCommand.builder()
-                .filesRepositoryBaseUrl(filesRepository.getBaseUrl()).studyId(studyId)
-                .build();
-            val studyAnalyses = getStudyAnalyses(studyId);
-            val fileCentricDocuments = getExpectedFileCentricDocument(studyId);
-            val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(fileCentricDocuments).build();
-
-            given(studyDAO.getStudyAnalyses(eq(command))).willReturn(Mono.just(studyAnalyses));
-            given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
-        }
-
-        // When
-        val indexResultMono = indexer.indexStudyRepository(IndexStudyRepositoryCommand.builder()
-            .repositoryCode("TEST-REPO")
             .build());
 
         // Then
-        StepVerifier.create(indexResultMono)
+        StepVerifier.create(indexResultFlux)
             .expectNext(result)
             .expectComplete()
             .verify();
 
         then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
-        then(studyDAO).should(times(3)).getStudyAnalyses(any());
-        then(indexServerAdapter).should(times(3)).batchUpsertFileRepositories(any());
-
     }
 
-    @Test
-    void shouldDetectConflictInFileAndDeleteItFromIndex() {
-        // Given
-        val studyId = "MALY-DE";
-        val repoCode = "TEST-REPO";
-        val filesRepository = getStubFilesRepository();
-        val a1 = Arrays.asList(loadJsonFixture(getClass(),
-            studyId +".conflicting.analysis.json", Analysis[].class));
-        val fileCentricDocuments = getExpectedFileCentricDocument(studyId);
-        val nonConflictingDocs = fileCentricDocuments.subList(1, fileCentricDocuments.size());
-        val fileRepo = Mono.just(getStubFilesRepository());
-        val studyAnalyses = Mono.just(a1);
-        val result = IndexResult.builder().successful(true).build();
-        val monoResult =  Mono.just(result);
-        val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(nonConflictingDocs).build();
-        val getStudyAnalysesCommand = GetStudyAnalysesCommand.builder()
-            .studyId(studyId)
-            .filesRepositoryBaseUrl(filesRepository.getBaseUrl())
-            .build();
-        val expectedNotification = new IndexerNotification(NotificationName.INDEX_FILE_CONFLICT,
-            getConflicts(fileCentricDocuments));
-        given(indexServerAdapter.fetchByIds(anyList()))
-            .willReturn(Mono.just(List.of(fileCentricDocuments.get(0))));
-        given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
-        given(studyDAO.getStudyAnalyses(eq(getStudyAnalysesCommand))).willReturn(studyAnalyses);
-        given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
-        given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
+  @Test
+  void shouldDetectConflictInFileAndDeleteItFromIndex() {
+    // Given
+    val studyId = "MALY-DE";
+    val repoCode = "TEST-REPO";
+    val filesRepository = getStubFilesRepository();
+    // Note: in MALE-DE.conflicting.analysis.json, conflict is: analysis 0a1df2a2-029d-48cc-839c-0a7c89ff972f is UNPUBLISHED
+    val a1 = Arrays.asList(loadJsonFixture(getClass(), studyId +".conflicting.analysis.json", Analysis[].class));
+    val fileCentricDocuments = getExpectedFileCentricDocument(studyId);
+    val nonConflictingDocs = fileCentricDocuments.subList(1, fileCentricDocuments.size());
+    val fileRepo = Mono.just(getStubFilesRepository());
+    val studyAnalyses = Mono.just(a1);
 
-        // When
-        val indexResultMono = indexer.indexStudy(IndexStudyCommand.builder()
-            .studyId(studyId)
-            .repositoryCode(filesRepository.getCode())
-            .build()
-        );
+    val result = IndexResult.builder().successful(true).build();
+    val monoResult =  Mono.just(result);
+    val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(nonConflictingDocs).build();
+    val getStudyAnalysesCommand = GetStudyAnalysesCommand.builder()
+        .studyId(studyId)
+        .filesRepositoryBaseUrl(filesRepository.getUrl())
+        .build();
+    val expectedNotification = new IndexerNotification(NotificationName.INDEX_FILE_CONFLICT,
+        getConflicts(fileCentricDocuments));
 
-        // Then
-        StepVerifier.create(indexResultMono)
-            .expectNext(result)
-            .expectComplete()
-            .verify();
+    given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
+    given(studyDAO.getStudyAnalyses(eq(getStudyAnalysesCommand))).willReturn(studyAnalyses);
+    given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of(fileCentricDocuments.get(0))));
+    given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
+    given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
 
-        then(notifier).should(times(1)).notify(eq(expectedNotification));
-        then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
-        then(studyDAO).should(times(1)).getStudyAnalyses(eq(getStudyAnalysesCommand));
-        then(indexServerAdapter).should(times(1))
-            .batchUpsertFileRepositories(eq(batchIndexFilesCommand));
-        then(indexServerAdapter).should(times(0))
-            .removeFiles(eq(Set.of(fileCentricDocuments.get(0).getObjectId())));
+    // When
+    val command = IndexStudyCommand.builder()
+        .studyId(studyId)
+        .repositoryCode(filesRepository.getCode())
+        .build();
 
-    }
+    val indexResultMono = indexer.indexStudy(command);
+
+    // Then
+    StepVerifier.create(indexResultMono)
+        .expectNext(result)
+        .expectComplete()
+        .verify();
+
+    then(notifier).should(times(1)).notify(eq(expectedNotification));
+    then(indexServerAdapter).should(times(1)).batchUpsertFileRepositories(eq(batchIndexFilesCommand));
+    then(indexServerAdapter).should(times(0)).removeFiles(eq(Set.of(fileCentricDocuments.get(0).getObjectId())));
+  }
 
     @NotNull
     private Map<String, Object> getConflicts(List<FileCentricDocument> fileCentricDocuments) {
@@ -382,7 +269,7 @@ class DefaultIndexerTest {
             .indexedFile(
                 DefaultIndexer.ConflictingFile.builder()
                     .studyId(fileCentricDocuments.get(0).getStudyId())
-                    .analysisId(fileCentricDocuments.get(0).getAnalysis().getId())
+                    .analysisId(fileCentricDocuments.get(0).getAnalysis().getAnalysisId())
                     .objectId(fileCentricDocuments.get(0).getObjectId())
                     .repoCode(fileCentricDocuments.get(0).getRepositories().stream().map(Repository::getCode)
                         .collect(Collectors.toUnmodifiableSet()))
@@ -390,7 +277,7 @@ class DefaultIndexerTest {
             ).newFile(
                 DefaultIndexer.ConflictingFile.builder()
                     .studyId(fileCentricDocuments.get(0).getStudyId())
-                    .analysisId(fileCentricDocuments.get(0).getAnalysis().getId())
+                    .analysisId(fileCentricDocuments.get(0).getAnalysis().getAnalysisId())
                     .objectId(fileCentricDocuments.get(0).getObjectId())
                     .repoCode(fileCentricDocuments.get(0).getRepositories().stream().map(Repository::getCode)
                         .collect(Collectors.toUnmodifiableSet()))
@@ -415,17 +302,17 @@ class DefaultIndexerTest {
         val getStudyAnalysesCommand = GetAnalysisCommand.builder()
             .studyId(studyId)
             .analysisId(analysisId)
-            .filesRepositoryBaseUrl(filesRepository.getBaseUrl())
+            .filesRepositoryBaseUrl(filesRepository.getUrl())
             .build();
 
-        given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of()));
+        given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
         given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
         given(studyDAO.getAnalysis(eq(getStudyAnalysesCommand))).willReturn(studyAnalysis);
-        given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
         given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
+        given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of()));
 
         // When
-        val indexResultMono = indexer.indexAnalysis(IndexAnalysisCommand.builder()
+        val indexResultMono = indexer.indexAnalysisToFileCentric(IndexAnalysisCommand.builder()
             .analysisIdentifier(AnalysisIdentifier.builder()
                 .studyId(studyId)
                 .analysisId(analysisId)
@@ -443,7 +330,6 @@ class DefaultIndexerTest {
         then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
         then(studyDAO).should(times(1)).getAnalysis(eq(getStudyAnalysesCommand));
         then(indexServerAdapter).should(times(1)).batchUpsertFileRepositories(eq(batchIndexFilesCommand));
-
     }
 
     @Test
@@ -494,7 +380,7 @@ class DefaultIndexerTest {
         val getStudyAnalysesCommand = GetAnalysisCommand.builder()
             .studyId(studyId)
             .analysisId(analysisId)
-            .filesRepositoryBaseUrl(filesRepository.getBaseUrl())
+            .filesRepositoryBaseUrl(filesRepository.getUrl())
             .build();
         val sampleExclusionRule = Mono.<Map<Class<?>, List<? extends ExclusionRule>>>just(
             Map.of(
@@ -509,7 +395,7 @@ class DefaultIndexerTest {
         given(exclusionRulesDAO.getExclusionRules()).willReturn(sampleExclusionRule);
 
         // When
-        val indexResultMono = indexer.indexAnalysis(IndexAnalysisCommand.builder()
+        val indexResultMono = indexer.indexAnalysisToFileCentric(IndexAnalysisCommand.builder()
             .analysisIdentifier(AnalysisIdentifier.builder()
                 .studyId(studyId)
                 .analysisId(analysisId)
@@ -532,51 +418,124 @@ class DefaultIndexerTest {
     }
 
     @Test
-    void shouldIndexSingleStudy() {
-        // Given
-        val studyId = "PEME-CA";
+    void indexRepositoryshouldNotifyOnStudyFetchError() {
+        //Given
         val repoCode = "TEST-REPO";
         val filesRepository = getStubFilesRepository();
-        val a1 = getStudyAnalyses(studyId);
-        val fileCentricDocuments = getExpectedFileCentricDocument(studyId);
         val fileRepo = Mono.just(getStubFilesRepository());
-        val studyAnalyses = Mono.just(a1);
-        val result = IndexResult.builder().successful(true).build();
-        val monoResult =  Mono.just(result);
-        val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(fileCentricDocuments).build();
-        val getStudyAnalysesCommand = GetStudyAnalysesCommand.builder()
-            .studyId(studyId)
-            .filesRepositoryBaseUrl(filesRepository.getBaseUrl())
-            .build();
+        val failure = FailureData.builder()
+            .failingIds(Map.of("studyId", Set.of("PACA-CA"))).build();
+        val failedIndexResult = IndexResult.builder().failureData(failure).successful(false).build();
+        val getStudiesCmd = GetAllStudiesCommand.builder().filesRepositoryBaseUrl(filesRepository.getUrl()).build();
 
-        given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of()));
+        given(studyDAO.getStudies(eq(getStudiesCmd))).willReturn(Flux.error(new IndexerException("failed", new RuntimeException(""), failure)));
         given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
-        given(studyDAO.getStudyAnalyses(eq(getStudyAnalysesCommand))).willReturn(studyAnalyses);
-        given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
-        given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
 
         // When
-        val indexResultMono = indexer.indexStudy(IndexStudyCommand.builder()
-            .studyId(studyId)
-            .repositoryCode(filesRepository.getCode())
-            .build()
-        );
+        val indexResultMono = indexer.indexRepository(IndexStudyRepositoryCommand.builder()
+            .repositoryCode("TEST-REPO")
+            .build());
 
         // Then
         StepVerifier.create(indexResultMono)
-            .expectNext(result)
+            .expectNext(failedIndexResult)
             .expectComplete()
             .verify();
 
         then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
-        then(studyDAO).should(times(1)).getStudyAnalyses(eq(getStudyAnalysesCommand));
-        then(indexServerAdapter).should(times(1)).batchUpsertFileRepositories(eq(batchIndexFilesCommand));
+        then(notifier).should(times(1)).notify(any());
+    }
 
+    @Test
+    void shouldIndexAllRepositoryStudies() {
+      //Given
+      val repoCode = "TEST-REPO";
+      val filesRepository = getStubFilesRepository();
+      val studies = getExpectedStudies();
+      val fileRepo = Mono.just(getStubFilesRepository());
+      val result = IndexResult.builder().successful(true).build();
+      val monoResult =  Mono.just(result);
+      val getStudiesCmd = GetAllStudiesCommand.builder().filesRepositoryBaseUrl(filesRepository.getUrl()).build();
+
+      given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of()));
+      given(studyDAO.getStudies(eq(getStudiesCmd))).willReturn(Flux.fromIterable(studies));
+      given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
+      given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
+
+      for(Study study: studies) {
+        val studyId = study.getStudyId();
+        val command = GetStudyAnalysesCommand.builder()
+            .filesRepositoryBaseUrl(filesRepository.getUrl()).studyId(studyId)
+            .build();
+        val studyAnalyses = getStudyAnalyses(studyId);
+        val fileCentricDocuments = getExpectedFileCentricDocument(studyId);
+        val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(fileCentricDocuments).build();
+
+        given(studyDAO.getStudyAnalyses(eq(command))).willReturn(Mono.just(studyAnalyses));
+        given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
+      }
+
+      // When
+      val indexResultMono = indexer.indexRepository(IndexStudyRepositoryCommand.builder()
+          .repositoryCode("TEST-REPO")
+          .build());
+
+      // Then
+      StepVerifier.create(indexResultMono)
+          .expectNext(result)
+          .expectComplete()
+          .verify();
+
+      then(studyRepositoryDao).should(times(4)).getFilesRepository(repoCode);
+      then(studyDAO).should(times(3)).getStudyAnalyses(any());
+      then(indexServerAdapter).should(times(3)).batchUpsertFileRepositories(any());
+    }
+
+    @Test
+    void shouldIndexSingleStudy() {
+      // Given
+      val studyId = "PEME-CA";
+      val repoCode = "TEST-REPO";
+      val filesRepository = getStubFilesRepository();
+      val a1 = getStudyAnalyses(studyId);
+      val fileCentricDocuments = getExpectedFileCentricDocument(studyId);
+      val fileRepo = Mono.just(getStubFilesRepository());
+      val studyAnalyses = Mono.just(a1);
+      val result = IndexResult.builder().successful(true).build();
+      val monoResult =  Mono.just(result);
+      val batchIndexFilesCommand = BatchIndexFilesCommand.builder().files(fileCentricDocuments).build();
+      val getStudyAnalysesCommand = GetStudyAnalysesCommand.builder()
+          .studyId(studyId)
+          .filesRepositoryBaseUrl(filesRepository.getUrl())
+          .build();
+
+      given(indexServerAdapter.fetchByIds(anyList())).willReturn(Mono.just(List.of()));
+      given(studyRepositoryDao.getFilesRepository(eq(repoCode))).willReturn(fileRepo);
+      given(studyDAO.getStudyAnalyses(eq(getStudyAnalysesCommand))).willReturn(studyAnalyses);
+      given(indexServerAdapter.batchUpsertFileRepositories(eq(batchIndexFilesCommand))).willReturn(monoResult);
+      given(exclusionRulesDAO.getExclusionRules()).willReturn(Mono.just(Map.of()));
+
+      // When
+      val indexResultMono = indexer.indexStudy(IndexStudyCommand.builder()
+          .studyId(studyId)
+          .repositoryCode(filesRepository.getCode())
+          .build()
+      );
+
+      // Then
+      StepVerifier.create(indexResultMono)
+          .expectNext(result)
+          .expectComplete()
+          .verify();
+
+      then(studyRepositoryDao).should(times(1)).getFilesRepository(repoCode);
+      then(studyDAO).should(times(1)).getStudyAnalyses(eq(getStudyAnalysesCommand));
+      then(indexServerAdapter).should(times(1)).batchUpsertFileRepositories(eq(batchIndexFilesCommand));
     }
 
     @SneakyThrows
     private List<FileCentricDocument> getExpectedFileCentricDocument(String studyId) {
-        return Arrays.asList(loadJsonFixture(getClass(), studyId + ".files.json", FileCentricDocument[].class));
+        return Arrays.asList(loadJsonFixtureSnakeCase(getClass(), studyId + ".files.json", FileCentricDocument[].class));
     }
 
     private List<Study> getExpectedStudies() {
@@ -592,7 +551,7 @@ class DefaultIndexerTest {
     private StudyRepository getStubFilesRepository() {
         return StudyRepository.builder()
             .name("singer")
-            .baseUrl("http://song.sing.sung")
+            .url("http://song.sing.sung")
             .code("TEST-REPO")
             .country("CA")
             .dataPath("/p1/p2")
